# StillMe-Learning-AI-System-RAG-Foundation

./: .coverage  .coveragerc  .cursorrules  .dockerignore  .env  .env.backup  .env.example  .env.recovered  .experience_memory.db  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pylintrc  .railwayignore  ACTION_PLAN.md  ADVANCED_AGENTDEV_README.md  AGENTDEV_CRITICAL_ANALYSIS_REPORT.md  AGENTDEV_FINAL_REPORT.md  AGENTDEV_INTEGRATOR_FINAL_REPORT.md  AGENTDEV_OPTIMIZATION_PROGRESS_REPORT.md  AGENTDEV_OPTIMIZATION_SUCCESS_REPORT.md  AGENTDEV_SUCCESS_REPORT.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_VALIDATORS.md  CHECK_DELETED_FILES.md  CODEOWNERS  COMMUNICATION_CHANNEL_ARCHITECTURE.md  COMMUNICATION_CHANNEL_SETUP_GUIDE.md  CONTRIBUTING.md  DEPENDENCY_RESOLUTION_REPORT.md  DEPLOY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOY_BACKEND_RAILWAY.md  DESKTOP_APP_FIX_GUIDE.md  DEVELOPMENT_GUIDE.md  Dockerfile  Dockerfile.ai-server  ENHANCEMENT_PLAN.md  (+380 more)
.cursor/: rules.json
.github/: dependabot.yml
.memory/: avoid_explanation_files.md
.oi_sandbox/: snippet.py
.sandbox/: .coverage
.streamlit/: config.toml
_attic/: README_NOTE.md  agent_dev.py  analyze_agentdev_interface.py  analyze_f821.py  api_server.py  app.py  conftest.py  create_lightweight_deployment.py  daily_learning_session.py  debug_policy.py  demo_agentdev_pipeline.py  desktop_app_server_config.py  dev_agent_cli.py  fix_agentdev_imports.py  fix_all_rule_tests.py  fix_chaos_tests.py  fix_indentation_errors.py  fix_kill_switch_tests.py  fix_kill_switch_tests_v2.py  fix_unpack_errors.py  general_module.py  get_f821_evidence.py  load_ollama_model.py  run_automated_scheduler.py  run_tests.py
adapters/: gpt5_client.py  ollama_client.py
agent-dev/: AGENTDEV_UNIFIED_REPORT.md  README.md  __init__.py
agent_dev/: README.md  __init__.py  runtime.py  schemas.py
agentdev/: __init__.py  ast_analyzer.py  context_analyzer.py  models.py  multi_agent_collaboration.py  net_guard.py  quality_enforcer.py  requirements.txt  security_gate.py  self_improvement.py  state_store.py  state_store.sql
agentdev_tests/: .coverage  conftest.py  test_chaos_resilience.py  test_e2e_real_scenarios.py  test_integration_workflows.py  test_learning_evaluation.py  test_performance_concurrency.py  test_security_adversarial.py  test_unit_business_thinking.py  test_unit_cleanup_manager.py  test_unit_conflict_resolver.py  test_unit_impact_analyzer.py  test_unit_security_thinking.py
alembic/: README.md  env.py
api/: endpoint_POST__api_v1_test.json
artifacts/: api_guardrails_grep.txt  bandit-report.json  chaos-results.json  chaos_engineering_results.json  comprehensive_test_report.json  context_system_info.txt  coverage-mock.json  coverage_improvement_report.md  documentation_report_2025-09-30_09-21-31.html  ethics_test_report_advanced_ethics.json  ethics_test_report_combined.json  junit-comprehensive.xml  junit-mock.xml  k6-results.json  kill_switch_fix_log.txt  ops_runbook.md  performance_report.json  pytest-report.xml  quality_gates_report.md  security-scan.json  security_defense_fix_report.md  syntax_errors_list.md
arxiv/: .gitignore  COMPILE_GUIDE.md  INSTALL_LATEX.md  QUICK_FIX.md  QUICK_START.md  README.md  ZENODO_FIX.md  ZENODO_UPDATE_CHECKLIST.md  check_latex.ps1  compile.ps1  compile.sh  install_packages.ps1  main.aux  main.out  main.tex  refs.bib
backup/: framework_backup_20250906_163945.py  framework_backup_20250908_021009.py  framework_backup_20250908_022753.py
backup_legacy/: framework_20250727_224109.py  framework_pre_fix_20250729_185446.py  layered_memory_v1_20250722_232836.py
backups/: backup_auto_save_20250908_000139.enc  backup_auto_save_20250908_000140.enc  conversational_core_20250715090824.py  layered_memory_20250715090824.py  smart_g_p_t__a_p_i__manager_20250715090827.py  token_optimizer_20250715090827.py
benchmarks/: accuracy_benchmark.json  ethics_benchmark.json
cache/: market_intel_cache.json  web_cache.py
chaos/: runner.py
ci/: check_policy_loaded.py  check_protected_files.py  check_secrets.py  check_skip_not_cancel.py
cli/: alert_manager.py  approval_manager.py  evolutionary_learning.py  kill_switch.py  learning_manager.py  learning_scheduler.py  rollback_learning.py
clients/: __init__.py  ollama_client.py
common/: __init__.py  config.py  errors.py  http.py  io.py  logging.py  retry.py  templates.py  validation.py
config/: __init__.py  abuse_guard.yaml  (+29 more)
(+5083 files in other folders)
